# APAProjects

./: CMakeLists.txt
0.0_Prove/: main.c
0.3/: main.c
0.4/: main.c
00_01/: main.c
00_02/: main.c
00_04/: main.c
01_01/: main.c
01_02/: main.c
01_03/: main.c
02_01/: main.c
0_Prove/: main.c
1.1/: main.c
1.2/: main.c
1.3/: main.c
2.2/: main.c
2.3/: main.c
3.1/: main.c
3.2/: main.c
4.1/: main.c
4.2/: main.c
4.3/: main.c
4.4/: main.c
4.5/: main.c
5.1/: main.c
5.1Mio/: main.c
5.2/: main.c
5.2Mio/: main.c
5.3/: main.c
5.3Aggiustare/: main.c
5.3Mio/: main.c
6.1/: main.c
6.1Mio/: main.c
6.2/: main.c
6.2Mio/: main.c
7.1/: main.c
AritmeticaVerticale/: main.c
CamminiLabirinto/: main.c
EquilibrioFrecce/: main.c
Gray/: main.c
ListaDiStringhe/: main.c
NumeriBinari/: main.c
ProveSorting/: main.c
Sudoku/: main.c
Triangolo_Somme/: main.c
