cmake_minimum_required(VERSION 3.15)
project(APAProjects C)

set(CMAKE_C_STANDARD 99)
add_executable(0.0_Prove 0.0_Prove/main.c)
add_executable(0.1 0.1/main.c)
add_executable(0.2 0.2/main.c)
add_executable(0.3 0.3/main.c)
add_executable(0.4 0.4/main.c)
add_executable(1.1 1.1/main.c)
add_executable(1.2 1.2/main.c)
add_executable(1.3 1.3/main.c)
add_executable(2.1 2.1/main.c)