cmake_minimum_required(VERSION 3.15)
project(APAProjects C)

set(CMAKE_C_STANDARD 99)
add_executable(0.0_Prove 0.0_Prove/main.c)
add_executable(0.1 0.1/main.c)
add_executable(0.2 0.2/main.c)
add_executable(0.3 0.3/main.c)
add_executable(0.4 0.4/main.c)
add_executable(1.1 1.1/main.c)
add_executable(1.2 1.2/main.c)
add_executable(1.3 1.3/main.c)
add_executable(2.1 2.1/main.c)
add_executable(2.3 2.3/main.c)
add_executable(3.1 3.1/main.c)
add_executable(3.2 3.2/main.c)
add_executable(2.2 2.2/main.c)
add_executable(CamminiLabirinto CamminiLabirinto/main.c)
add_executable(ProveSorting ProveSorting/main.c)
add_executable(Gray Gray/main.c)
add_executable(4.1 4.1/main.c)
add_executable(4.2 4.2/main.c)
add_executable(4.3 4.3/main.c)
add_executable(4.4 4.4/main.c)
add_executable(4.5 4.5/main.c)
add_executable(5.1 5.1/main.c)
add_executable(5.3 5.3/main.c)
add_executable(5.2 5.2/main.c)