cmake_minimum_required(VERSION 3.15)
project(APAProjects C)

set(CMAKE_C_STANDARD 99)
add_executable(0.0_Prove 0.0_Prove/main.c)
add_executable(0.1 0.1/main.c)
add_executable(0.2 0.2/main.c)
add_executable(0.3 0.3/main.c)
add_executable(0.4 0.4/main.c)
add_executable(1.1 1.1/main.c)
add_executable(1.2 1.2/main.c)
add_executable(1.3 1.3/main.c)
add_executable(2.1 2.1/main.c)
add_executable(2.3 2.3/main.c)
add_executable(3.1 3.1/main.c)
add_executable(3.2 3.2/main.c)
add_executable(2.2 2.2/main.c)
add_executable(CamminiLabirinto CamminiLabirinto/main.c)
add_executable(ProveSorting ProveSorting/main.c)
add_executable(Gray Gray/main.c)
add_executable(4.1 4.1/main.c)
add_executable(4.2 4.2/main.c)
add_executable(4.3 4.3/main.c)
add_executable(4.4 4.4/main.c)
add_executable(4.5 4.5/main.c)
add_executable(Triangolo_Somme Triangolo_Somme/main.c)
add_executable(NumeriBinari NumeriBinari/main.c)
add_executable(5.1Mio 5.1Mio/main.c)
add_executable(5.2Mio 5.2Mio/main.c)
add_executable(5.3Mio 5.3Mio/main.c)
add_executable(6.1Mio 6.1Mio/main.c)
add_executable(6.2Mio 6.2Mio/main.c)
add_executable(EquilibrioFrecce EquilibrioFrecce/main.c)
add_executable(AritmeticaVerticale AritmeticaVerticale/main.c)
add_executable(ListaDiStringhe ListaDiStringhe/main.c)
add_executable(Sudoku Sudoku/main.c)
add_executable(7.1 7.1/main.c)